RESOLVED FIXED229479
testb3_6 should be using JSSwitchPtrTag instead of JITCompilationPtrTag.
https://bugs.webkit.org/show_bug.cgi?id=229479
Summary testb3_6 should be using JSSwitchPtrTag instead of JITCompilationPtrTag.
Mark Lam
Reported 2021-08-24 17:01:37 PDT
This is in testInterpreter() which is emitting code for a jump table. JSSwitchPtrTag is the right tag to use here.
Attachments
proposed patch. (2.63 KB, patch)
2021-08-24 17:04 PDT, Mark Lam
ysuzuki: review+
Radar WebKit Bug Importer
Comment 1 2021-08-24 17:02:21 PDT
Mark Lam
Comment 2 2021-08-24 17:04:28 PDT
Created attachment 436349 [details] proposed patch.
Yusuke Suzuki
Comment 3 2021-08-24 17:05:45 PDT
Comment on attachment 436349 [details] proposed patch. r=me
Mark Lam
Comment 4 2021-08-24 17:08:57 PDT
Thanks for the review. Landed in r281534: <http://trac.webkit.org/r281534>.
Note You need to log in before you can comment on or make changes to this bug.