testb3_6 should be using JSSwitchPtrTag instead of JITCompilationPtrTag. https://bugs.webkit.org/show_bug.cgi?id=229479 rdar://82316967

Reviewed by Yusuke Suzuki.

This is in testInterpreter() which is emitting code for a jump table.
JSSwitchPtrTag is the right tag to use here.

* b3/testb3_6.cpp:
(testInterpreter):



Canonical link: https://commits.webkit.org/240905@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281534 268f45cc-cd09-0410-ab3c-d52691b4dbfc