Source/JavaScriptCore/b3/testb3_6.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2015-2020 Apple Inc. All rights reserved.
+ * Copyright (C) 2015-2021 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -1677,19 +1677,19 @@ void testInterpreter()
             AllowMacroScratchRegisterUsage allowScratch(jit);
             Vector<Box<CCallHelpers::Label>> labels = params.successorLabels();
 
-            MacroAssemblerCodePtr<JITCompilationPtrTag>* jumpTable = bitwise_cast<MacroAssemblerCodePtr<JITCompilationPtrTag>*>(
-                params.proc().addDataSection(sizeof(MacroAssemblerCodePtr<JITCompilationPtrTag>) * labels.size()));
+            MacroAssemblerCodePtr<JSSwitchPtrTag>* jumpTable = bitwise_cast<MacroAssemblerCodePtr<JSSwitchPtrTag>*>(
+                params.proc().addDataSection(sizeof(MacroAssemblerCodePtr<JSSwitchPtrTag>) * labels.size()));
 
             GPRReg scratch = params.gpScratch(0);
 
             jit.move(CCallHelpers::TrustedImmPtr(jumpTable), scratch);
             jit.load64(CCallHelpers::BaseIndex(scratch, params[0].gpr(), CCallHelpers::ScalePtr), scratch);
-            jit.farJump(scratch, JITCompilationPtrTag);
+            jit.farJump(scratch, JSSwitchPtrTag);
 
             jit.addLinkTask(
                 [&, jumpTable, labels] (LinkBuffer& linkBuffer) {
                     for (unsigned i = labels.size(); i--;)
-                        jumpTable[i] = linkBuffer.locationOf<JITCompilationPtrTag>(*labels[i]);
+                        jumpTable[i] = linkBuffer.locationOf<JSSwitchPtrTag>(*labels[i]);
                 });
         });
 
